# connors-sr

./: .gitignore  .python-version  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-env.yml  ci.yml  tests.yml
connors_sr/: __init__.py  version.py
connors_sr/core/: __init__.py  registry.py  support_resistance.py
connors_sr/services/: __init__.py  base.py  sr_service.py
tests/: test_sr_calculator.py
